--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -42,6 +42,7 @@
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="ObservableValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyList.cs" />
     <Compile Include="Text\Json\JsonColon.cs" />
     <Compile Include="Text\Json\JsonComma.cs" />
     <Compile Include="Text\Json\JsonComment.cs" />
