--- a/SysExtensions/Tests/SysExtensions.Tests.csproj
+++ b/SysExtensions/Tests/SysExtensions.Tests.csproj
@@ -66,10 +66,10 @@
     </When>
   </Choose>
   <ItemGroup>
+    <Compile Include="JsonErrorInfoTests.cs" />
     <Compile Include="JsonSyntaxTests.cs" />
     <Compile Include="JsonTokenizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextErrorInfoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SysExtensions\SysExtensions.csproj">
