--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Text\Json\JsonString.cs" />
     <Compile Include="Text\Json\JsonSymbol.cs" />
     <Compile Include="Text\Json\JsonSymbolVisitor.cs" />
+    <Compile Include="Text\Json\JsonSyntaxNode.cs" />
+    <Compile Include="Text\Json\JsonSyntaxNodeVisitor.cs" />
     <Compile Include="Text\Json\JsonTokenizer.cs" />
     <Compile Include="Text\Json\JsonUnknownSymbol.cs" />
     <Compile Include="Text\Json\JsonUnterminatedMultiLineComment.cs" />
