--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Text\Json\JsonIntegerLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonListSyntax.cs" />
     <Compile Include="Text\Json\JsonMapSyntax.cs" />
+    <Compile Include="Text\Json\JsonMissingValueSyntax.cs" />
     <Compile Include="Text\Json\JsonParser.cs" />
     <Compile Include="Text\Json\JsonSquareBracketClose.cs" />
     <Compile Include="Text\Json\JsonSquareBracketOpen.cs" />
