Add speech.png to project file.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -147,12 +147,13 @@
     <None Include="Properties\flip.png" />
     <None Include="Properties\globe.png" />
     <None Include="Properties\paste.png" />
+    <None Include="Properties\redo.png" />
     <None Include="Properties\save.png" />
     <None Include="Properties\settings.png" />
+    <None Include="Properties\speech.png" />
+    <None Include="Properties\undo.png" />
     <None Include="Properties\zoom_in.png" />
     <None Include="Properties\zoom_out.png" />
-    <None Include="Properties\redo.png" />
-    <None Include="Properties\undo.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
