--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -131,13 +131,13 @@
       <Project>{ae889497-9b7c-4fd5-b5da-a3d4158369ec}</Project>
       <Name>Eutherion.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Eutherion\Win\Eutherion.Win.csproj">
+      <Project>{77da1d85-0062-4caa-af31-49d9a0b16bb2}</Project>
+      <Name>Eutherion.Win</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sandra.Chess\Sandra.Chess.csproj">
       <Project>{f5e121c5-a874-4fef-9ff5-56285420cff6}</Project>
       <Name>Sandra.Chess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandra.UI.WF\Sandra.UI.WF.csproj">
-      <Project>{77da1d85-0062-4caa-af31-49d9a0b16bb2}</Project>
-      <Name>Sandra.UI.WF</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
