--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -84,6 +84,7 @@
     <Compile Include="UIActions\UIActionBinding.cs" />
     <Compile Include="UIActions\UIActionHandler.cs" />
     <Compile Include="UIActions\UIMenu.cs" />
+    <Compile Include="Utils\KeyUtilities.cs" />
     <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
