Add FormExtensions file with useful method Deminimize().

--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DragDrop\DragUtilities.cs" />
     <Compile Include="FileWatcher.cs" />
     <Compile Include="FocusHelper.cs" />
+    <Compile Include="FormExtensions.cs" />
     <Compile Include="Forms\ConstrainedMoveResizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
