Move shared UIActions which open or activate a tool form to new static class ToolForms.cs.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -128,6 +128,7 @@
       <SubType>Component</SubType>
       <DependentUpon>SyntaxEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="ToolForms.cs" />
     <Compile Include="UIActionForm.cs">
       <SubType>Form</SubType>
     </Compile>
