--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -77,6 +77,7 @@
     <Compile Include="UIActions\LocalizedConsoleKeys.cs" />
     <Compile Include="UIActions\ShortcutKeys.cs" />
     <Compile Include="UIActions\UIAction.cs" />
+    <Compile Include="UIActions\UIActionHandlerFunc.cs" />
     <Compile Include="UtilityExtensions.cs" />
     <Compile Include="Utils\Box.cs" />
     <Compile Include="Utils\CircularBuffer.cs" />
