--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -56,7 +56,14 @@
     <Compile Include="AppTemplate\FormStateAutoSaver.cs" />
     <Compile Include="AppTemplate\Localizers.cs" />
     <Compile Include="AppTemplate\Session.cs" />
+    <Compile Include="AppTemplate\SharedLocalizedlStringKeys.cs" />
+    <Compile Include="AppTemplate\SharedResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SharedResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="AppTemplate\SharedSettingKeys.cs" />
+    <Compile Include="AppTemplate\SharedUIAction.cs" />
     <Compile Include="InteractiveGame.cs" />
     <Compile Include="InteractiveGame.UIActions.cs">
       <DependentUpon>InteractiveGame.cs</DependentUpon>
@@ -117,7 +124,6 @@
       <DependentUpon>SettingsForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SharedUIAction.cs" />
     <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,21 +159,26 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Properties\copy.png" />
-    <None Include="Properties\cut.png" />
     <None Include="Properties\flip.png" />
     <None Include="Properties\globe.png" />
-    <None Include="Properties\paste.png" />
-    <None Include="Properties\redo.png" />
     <None Include="Properties\save.png" />
     <None Include="Properties\settings.png" />
     <None Include="Properties\speech.png" />
-    <None Include="Properties\undo.png" />
-    <None Include="Properties\zoom_in.png" />
-    <None Include="Properties\zoom_out.png" />
+    <None Include="AppTemplate\copy.png" />
+    <None Include="AppTemplate\cut.png" />
+    <None Include="AppTemplate\paste.png" />
+    <None Include="AppTemplate\redo.png" />
+    <None Include="AppTemplate\undo.png" />
+    <None Include="AppTemplate\zoom_in.png" />
+    <None Include="AppTemplate\zoom_out.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AppTemplate\SharedResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SharedResources.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Eutherion.Win.AppTemplate</CustomToolNamespace>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
