--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -65,6 +65,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="AppTemplate\Session.cs" />
+    <Compile Include="AppTemplate\Session.ToolForms.cs" />
     <Compile Include="AppTemplate\SharedLocalizedlStringKeys.cs" />
     <Compile Include="AppTemplate\SharedResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -132,7 +133,6 @@
     <Compile Include="SyntaxEditor.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ToolForms.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Eutherion\Shared\Eutherion.Shared.csproj">
@@ -153,8 +153,6 @@
     <None Include="Properties\flip.png" />
     <None Include="Properties\globe.png" />
     <None Include="Properties\save.png" />
-    <None Include="Properties\settings.png" />
-    <None Include="Properties\speech.png" />
     <None Include="AppTemplate\copy.png" />
     <None Include="AppTemplate\cut.png" />
     <None Include="AppTemplate\paste.png" />
@@ -162,6 +160,8 @@
     <None Include="AppTemplate\undo.png" />
     <None Include="AppTemplate\zoom_in.png" />
     <None Include="AppTemplate\zoom_out.png" />
+    <None Include="AppTemplate\settings.png" />
+    <None Include="AppTemplate\speech.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
