Move suggested default English translations for localized string keys to classes where they are defined. Move BuiltInEnglishLocalizer to AppTemplate, and initialize it using four different sources.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppTemplate\BuiltInEnglishLocalizer.cs" />
     <Compile Include="AppTemplate\FileLocalizer.cs" />
     <Compile Include="AppTemplate\FormStateAutoSaver.cs" />
     <Compile Include="AppTemplate\JsonErrorInfoExtensions.cs" />
@@ -91,7 +92,7 @@
     <Compile Include="InteractiveGame.UIActions.cs">
       <DependentUpon>InteractiveGame.cs</DependentUpon>
     </Compile>
-    <Compile Include="Localizers.cs" />
+    <Compile Include="LocalizedStringKeys.cs" />
     <Compile Include="MdiContainerForm.cs">
       <SubType>Form</SubType>
     </Compile>
