Rename to SharedSettings. Move DefaultLocalPreferencesFileName and DefaultLangFolderName to SharedSettings.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -80,7 +80,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SharedResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="AppTemplate\SharedSettingKeys.cs" />
+    <Compile Include="AppTemplate\SharedSettings.cs" />
     <Compile Include="AppTemplate\SharedUIAction.cs" />
     <Compile Include="AppTemplate\SyntaxEditor.cs">
       <SubType>Component</SubType>
