--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\NonSelectableButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\UpdatableRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
