--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -159,6 +159,7 @@
     <None Include="AppTemplate\speech.png" />
     <None Include="AppTemplate\globe.png" />
     <None Include="AppTemplate\save.png" />
+    <None Include="AppTemplate\minimize.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
