Add maximize button.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -160,6 +160,7 @@
     <None Include="AppTemplate\globe.png" />
     <None Include="AppTemplate\save.png" />
     <None Include="AppTemplate\minimize.png" />
+    <None Include="AppTemplate\maximize.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
