--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -161,6 +161,7 @@
     <None Include="AppTemplate\save.png" />
     <None Include="AppTemplate\minimize.png" />
     <None Include="AppTemplate\maximize.png" />
+    <None Include="AppTemplate\demaximize.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
