--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConstantImageProvider.cs" />
+    <Compile Include="ConstantTextProvider.cs" />
     <Compile Include="Controls\NonSelectableButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -59,6 +60,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IImageProvider.cs" />
+    <Compile Include="ITextProvider.cs" />
     <Compile Include="LineSegment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\AutoSave.cs" />
