--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IImageProvider.cs" />
     <Compile Include="ITextProvider.cs" />
     <Compile Include="LineSegment.cs" />
+    <Compile Include="LiveTextFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\AutoSave.cs" />
     <Compile Include="Storage\CompactSettingWriter.cs" />
