--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -65,7 +65,6 @@
     <Compile Include="LineSegment.cs" />
     <Compile Include="LiveTextFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\AutoSave.cs" />
     <Compile Include="Storage\CompactSettingWriter.cs" />
     <Compile Include="Storage\FileNameType.cs" />
     <Compile Include="Storage\ITypeErrorBuilder.cs" />
@@ -85,6 +84,7 @@
     <Compile Include="Storage\SettingObject.cs" />
     <Compile Include="Storage\SettingProperty.cs" />
     <Compile Include="Storage\SettingReader.cs" />
+    <Compile Include="Storage\SettingsAutoSave.cs" />
     <Compile Include="Storage\SettingSchema.cs" />
     <Compile Include="Storage\SettingsFile.cs" />
     <Compile Include="Storage\SettingWriter.cs" />
