--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -167,6 +167,18 @@
     <None Include="AppTemplate\maximize.png" />
     <None Include="AppTemplate\demaximize.png" />
     <None Include="AppTemplate\close.png" />
+    <None Include="Properties\bb.png" />
+    <None Include="Properties\bk.png" />
+    <None Include="Properties\bn.png" />
+    <None Include="Properties\bp.png" />
+    <None Include="Properties\bq.png" />
+    <None Include="Properties\br.png" />
+    <None Include="Properties\wb.png" />
+    <None Include="Properties\wk.png" />
+    <None Include="Properties\wn.png" />
+    <None Include="Properties\wp.png" />
+    <None Include="Properties\wq.png" />
+    <None Include="Properties\wr.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
