--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Utils\CircularBuffer.cs" />
     <Compile Include="Utils\EnumHelper.cs" />
     <Compile Include="Utils\EnumIndexedArray.cs" />
+    <Compile Include="Utils\FileUtilities.cs" />
     <Compile Include="Utils\HandlerIsAnonymousException.cs" />
     <Compile Include="Utils\ImplementationSet.cs" />
     <Compile Include="Utils\ObservableValue.cs" />
