Add reference to Eutherion.Win.csproj.

--- a/Eutherion/Tests/Eutherion.Tests.csproj
+++ b/Eutherion/Tests/Eutherion.Tests.csproj
@@ -73,6 +73,10 @@
       <Project>{ae889497-9b7c-4fd5-b5da-a3d4158369ec}</Project>
       <Name>Eutherion.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Win\Eutherion.Win.csproj">
+      <Project>{078cb2b5-bf6c-497a-8a0e-2633367e4759}</Project>
+      <Name>Eutherion.Win</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
