--- a/Eutherion/Tests/Eutherion.Tests.csproj
+++ b/Eutherion/Tests/Eutherion.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="JsonSyntaxTests.cs" />
     <Compile Include="JsonTokenizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingCopyTextFileTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
