--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -57,9 +57,7 @@
     <Compile Include="AppTemplate\FileLocalizer.cs" />
     <Compile Include="AppTemplate\FormStateAutoSaver.cs" />
     <Compile Include="AppTemplate\JsonErrorInfoExtensions.cs" />
-    <Compile Include="AppTemplate\JsonTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="AppTemplate\JsonSyntaxDescriptor.cs" />
     <Compile Include="AppTemplate\ListBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
