Refer to %LOCALAPPDATA% environment variable in DefaultSettings.json.

--- a/Bin/DefaultSettings.json
+++ b/Bin/DefaultSettings.json
@@ -10,13 +10,13 @@
   // allowed value is 1.
   "version": 1,
 
-  // Subfolder of %APPDATA%/Local which should be used to store persistent data.
+  // Subfolder of %LOCALAPPDATA% which should be used to store persistent data.
   // This includes the auto-save file, or e.g. a preferences file. Backward
   // slashes ('\') must be escaped in json strings (e.g. "C:\\Temp\\temp.txt").
   // Instead, forward slashes ('/') can be used to separate directories as well.
   "app_data_sub_folder_name": "SandraChess",
 
-  // File name in the %APPDATA%/Local subfolder which contains the user-specific
+  // File name in the %LOCALAPPDATA% subfolder which contains the user-specific
   // preferences.
   "local_preferences_file_name": "Preferences.json",
 
